--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -17,5 +17,8 @@
 @media screen and (max-width: 650px)  {
   .elements {
     grid-template-columns: 282px;
+    margin-top: 36px;
+    grid-row-gap: 21px;
+
   }
 }
