--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -9,6 +9,11 @@
   align-items: center;
   display: flex;
   justify-content: center;
+  transition: opacity 0.2s ease-out;
+}
+
+.profile__edit-button:hover {
+  opacity: 0.6;
 }
 
 @media screen and (max-width: 650px)  {
