Верстка попап с адаптивом

--- a/blocks/element/__like-button/element__like-button.css
+++ b/blocks/element/__like-button/element__like-button.css
@@ -5,6 +5,7 @@
   align-items: center;
   line-height: 0;
   transition: opacity 0.2s ease-out;
+  cursor: pointer;
 }
 
 .element__like-button:hover {
