--- a/pages/index.css
+++ b/pages/index.css
@@ -5,6 +5,7 @@
 @import url(../blocks/page/page.css);
 
 @import url(../blocks/profile-form/profile-form.css);
+@import url(../blocks/profile-form/_active/profile-form_active.css);
 @import url(../blocks/profile-form/__container/profile-form__container.css);
 @import url(../blocks/profile-form/__toggle/profile-form__toggle.css);
 @import url(../blocks/profile-form/__title/profile-form__title.css);
