--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -7,6 +7,9 @@
   border-radius: 2px;
   transition: opacity 0.2s ease-out;
   cursor: pointer;
+  background-image: url(../../../images/profile/profile-sign-add.svg);
+  background-repeat: no-repeat;
+  background-position: center;
 
 }
 
