Все правки и валидация

--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -21,6 +21,10 @@
   opacity: 0.6;
 }
 
+.profile__edit-button[title] {
+  font-size: 30px;
+}
+
 @media screen and (max-width: 650px)  {
   .profile__edit-button {
     width: 18px;
