Fix: Правки по замечаниям в коде после первого ревью

--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,11 +1,14 @@
 .header__logo {
   height: 33px;
+  margin-bottom: 41px;
 }
 
 
 @media screen and (max-width: 650px)  {
   .header__logo {
     height: 24px;
+    margin-bottom: 31px;
+
   }
 }
 
