--- a/blocks/profile/__photo/profile__photo.css
+++ b/blocks/profile/__photo/profile__photo.css
@@ -1,3 +1,8 @@
 .profile__photo {
+  box-sizing: border-box;
+  border-radius: 50%;
   height: 120px;
+  width: 120px;
+  overflow: hidden;
+  object-fit: cover;
 }
