--- a/blocks/element/__like-button/element__like-button.css
+++ b/blocks/element/__like-button/element__like-button.css
@@ -1,7 +1,7 @@
 .element__like-button {
   background-color: transparent;
   border: 0;
-  margin: 0 5px 0 0;
+  margin: 0;
   align-items: center;
   line-height: 0;
   transition: opacity 0.2s ease-out;
