--- a/blocks/element/__text-block/element__text-block.css
+++ b/blocks/element/__text-block/element__text-block.css
@@ -1,7 +1,8 @@
 .element__text-block {
   display: flex;
   justify-content: space-between;
-  margin: 0 15px 0 21px;
+
+  margin: 25px 20px;
   height: inherit;
   align-items: center;
 }
