--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,9 +1,8 @@
 .header {
   display: flex;
   margin: 45px auto 0 auto;
-  border-bottom: 1px solid #545454;
+  border-bottom: 1px solid rgb(84, 84, 84, .7);
   width: 100%;
-  height: 74px;
 }
 
 @media screen and (max-width: 900px)  {
@@ -15,7 +14,6 @@
 @media screen and (max-width: 650px)  {
   .header {
     margin-top: 28px;
-    height: 56px;
   }
 }
 
