--- a/blocks/profile-form/__title/profile-form__title.css
+++ b/blocks/profile-form/__title/profile-form__title.css
@@ -5,8 +5,8 @@
   color: #000;
   margin-block-start: 0;
   margin-block-end: 0;
-  text-align: center;
-  margin: 34px auto 0 auto;
+  text-align: left;
+  margin: 34px auto 0 36px;
 
 }
 
@@ -15,6 +15,7 @@
     font-size: 18px;
     line-height: 22px;
     margin-top: 26px;
+    margin-left: 22px;
   }
 }
 
