--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -8,6 +8,7 @@
   transition: opacity 0.2s ease-out;
   cursor: pointer;
   background-image: url(../../../images/profile/profile-sign-add.svg);
+  background-size: 22px 22px;
   background-repeat: no-repeat;
   background-position: center;
 
@@ -17,10 +18,10 @@
   opacity: 0.6;
 }
 
-@media screen and (max-width: 700px)  {
+@media screen and (max-width: 900px)  {
   .profile__add-button {
     width: 282px;
-
+    background-size: 16px 16px;
   }
 }
 
