--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -4,14 +4,18 @@
   line-height: 22px;
   margin-block-start: 0;
   margin-block-end: 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 500px;
 }
 
-@media screen and (max-width: 700px)  {
+@media screen and (max-width: 900px)  {
   .profile__description {
     font-size: 14px;
     line-height: 17px;
     grid-column: 1/-1;
     text-align: center;
-
+    max-width: 282px;
   }
 }
