--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -5,11 +5,16 @@
   margin: 0;
   margin-block-start: 0;
   margin-block-end: 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 500px;
 }
 
-@media screen and (max-width: 650px)  {
+@media screen and (max-width: 900px)  {
   .profile__name {
     font-size: 27px;
     line-height: 33px;
+    max-width: 282px;
   }
 }
