--- a/blocks/form/__container/form__container.css
+++ b/blocks/form/__container/form__container.css
@@ -1,4 +1,4 @@
-.profile-form__container {
+.form__container {
   width: 430px;
   background: #FFFFFF;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
@@ -9,7 +9,7 @@
 
 
 @media screen and (max-width: 650px)  {
-  .profile-form__container {
+  .form__container {
     width: 282px;
   }
 }
