--- a/blocks/form/__title/form__title.css
+++ b/blocks/form/__title/form__title.css
@@ -1,4 +1,4 @@
-.profile-form__title {
+.form__title {
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
@@ -11,7 +11,7 @@
 }
 
 @media screen and (max-width: 650px)  {
-  .profile-form__title {
+  .form__title {
     font-size: 18px;
     line-height: 22px;
     margin-top: 26px;
