--- a/blocks/form/profile-form.css
+++ b/blocks/form/profile-form.css
@@ -1,4 +1,4 @@
-.profile-form {
+.form {
   width: 100%;
   height: 100vh;
   background-color: rgb(42, 44, 47, .5);
@@ -12,7 +12,7 @@
 }
 
 @media screen and (max-width: 650px)  {
-  .profile-form {
+  .form {
     gap: 16px;
   }
 }
