--- a/pages/index.css
+++ b/pages/index.css
@@ -11,6 +11,8 @@
 @import url(../blocks/form/__title/form__title.css);
 @import url(../blocks/form/__form/form__form.css);
 @import url(../blocks/form/__input-field/form__input-field.css);
+@import url(../blocks/form/__input-field/_placeholder/form__input-field_placeholder.css);
+
 @import url(../blocks/form/__save-button/form__save-button.css);
 
 @import url(../blocks/header/header.css);
