--- a/pages/index.css
+++ b/pages/index.css
@@ -29,8 +29,10 @@
 
 @import url(../blocks/elements/elements.css);
 @import url(../blocks/element/element.css);
+@import url(../blocks/element/__basket-button/element__basket-button.css);
 @import url(../blocks/element/__like-button/element__like-button.css);
 @import url(../blocks/element/__like-button/_active/element__like-button_active.css);
+
 
 @import url(../blocks/element/__text-block/element__text-block.css);
 @import url(../blocks/element/__photo/element__photo.css);
