all project done

--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -1,4 +1,4 @@
-.form__toggle {
+.popup__close-button {
   width: 32px;
   height: 32px;
   transition: opacity 0.2s ease-out;
@@ -15,13 +15,13 @@
 
 }
 
-.form__toggle:hover {
+.popup__close-button:hover {
   opacity: 0.6;
 }
 
 
 @media screen and (max-width: 650px)  {
-  .form__toggle {
+  .popup__close-button {
     width: 20px;
     height: 20px;
     grid-column: 2;
