--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,4 +1,5 @@
 .popup {
+  display: grid;
   width: 100%;
   height: 100vh;
   background-color: rgb(42, 44, 47, .5);
@@ -10,7 +11,7 @@
   gap: 8px;
   visibility: hidden;
   opacity: 0;
-  transition: visibility 0s, opacity 0.4s ease-out;
+  transition: visibility 0.4s, opacity 0.4s ease-out;
 }
 
 @media screen and (max-width: 650px)  {
