Feat all points of project

--- a/pages/index.css
+++ b/pages/index.css
@@ -15,9 +15,15 @@
 
 
 @import url(../blocks/form/form.css);
+@import url(../blocks/form/__field/form__field.css);
 @import url(../blocks/form/__input-field/form__input-field.css);
+@import url(../blocks/form/__input-field/_error/form__input-field_error.css);
 @import url(../blocks/form/__input-field/_placeholder/form__input-field_placeholder.css);
 @import url(../blocks/form/__submit-button/form__submit-button.css);
+@import url(../blocks/form/__submit-button/_inactive/form__submit-button_inactive.css);
+@import url(../blocks/form/__input-error/form__input-error.css);
+@import url(../blocks/form/__input-error/_active/form__inpur-error_active.css);
+
 
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
